changed page text in image options

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -866,7 +866,7 @@ function hide_skip(num){
  </TR>
  <TR>
   <Td>
-<font class="small">Color GC content: green=GC, orange=N? (SLOW)</font>
+<font class="small">Color <span style="color:#009900;">GC</span> content green? (SLOW)</font>
   <td>
 <label class="small"><input class="backbox" type="radio" name="show_gc" id="show_gc" tabindex="1" value="1" <TMPL_VAR NAME="GC_COLOR_YES"> />Yes</label>
 <label class=small><input class="backbox" type="radio" name="show_gc" id="show_gc" tabindex="1" value="0" <TMPL_VAR NAME="GC_COLOR_NO"> />No</label>
@@ -874,7 +874,7 @@ function hide_skip(num){
   </TD>
  <TR>
   <Td>
-<font class="small">Color N orange?</font>
+<font class="small">Color <span style="color:#FF66FF;">masked</span> and <span style="color:#FF9900;">unsequenced</span> NTs?</font>
   <td>
 <label class="small"><input class="backbox" type="radio" name="show_nt" id="show_nt" tabindex="1" value="1" <TMPL_VAR NAME="NT_COLOR_YES">/>Yes</label>
 <label class=small><input class="backbox" type="radio" name="show_nt" id="show_nt" tabindex="1" value="0" <TMPL_VAR NAME="NT_COLOR_NO">/>No</label>
