--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -9,6 +9,7 @@ $('#maketable').html('<div id ="annotation" style = "overflow: auto; height: 300
     myObj = new generate_seq_obj_with_featid(featid,'<TMPL_VAR NAME=FEATNAME>',<TMPL_VAR NAME=DSID>,'<TMPL_VAR NAME=CHR>','<TMPL_VAR NAME=FEAT_START>','<TMPL_VAR NAME=FEAT_STOP>');}
   else{
     myObj = new generate_seq_obj(<TMPL_VAR NAME=DSID>,'<TMPL_VAR NAME=CHR>');}
+
   redefine();
   get_sequence(<TMPL_VAR NAME=RC>);
 });
@@ -16,8 +17,10 @@ $('#maketable').html('<div id ="annotation" style = "overflow: auto; height: 300
 
 function generate_seq_obj(dsid,chr){
 
-  this.start=$('#upstream').val();
-  this.stop=$('#downstream').val();
+  this.start=$('#upstream').val()*1;
+  this.stop=$('#downstream').val()*1;
+  this.orig_start=$('#upstream').val()*1;
+  this.orig_stop=$('#downstream').val()*1;
   this.dsid=dsid;
   this.chr=chr;
   this.pro=0;
@@ -25,8 +28,10 @@ function generate_seq_obj(dsid,chr){
 
 function generate_seq_obj_with_featid(featid,featname, dsid, chr, feat_start, feat_stop){
   this.featid=featid;
-  this.start=feat_start-$('#upstream').val();
-  this.stop=$('#downstream').val()+feat_stop;
+  this.start=feat_start*1;//-$('#upstream').val()*1;
+  this.stop=feat_stop*1; //+$('#downstream').val()*1;
+  this.orig_start=feat_start*1;
+  this.orig_stop=feat_stop*1;
   this.featname=featname;
   this.dsid=dsid;
   this.chr=chr;
@@ -152,9 +157,10 @@ function redefine(){
 
   var up;
   var down;
+  
   if(! isNaN($('#addup').val())) {
-   up = $('#upstream').val()*1-$('#addup').val()*1;
-   down = $('#downstream').val()*1+$('#adddown').val()*1;
+   up = ($('#upstream').val()*1)-($('#addup').val()*1);
+   down = ($('#downstream').val())*1+($('#adddown').val()*1);
    $('#upstream').val(up);
    $('#downstream').val(down);
    myObj.start=$('#upstream').val();
@@ -162,8 +168,8 @@ function redefine(){
 
   }
   else {
-   myObj.start = myObj.start*1 - $('#upstream').val()*1;
-   myObj.stop  = myObj.stop *1 + $('#downstream').val()*1;
+   myObj.start = (myObj.orig_start*1) - ($('#upstream').val()*1);
+   myObj.stop  = (myObj.orig_stop *1) + ($('#downstream').val()*1);
   }
   get_sequence(myObj.rc,myObj.pro,1);
   $('#addup').val(0);
